Fixed scrolling issue on GUI overflow

--- a/style.css
+++ b/style.css
@@ -140,12 +140,13 @@ header h1 + .separator {
   top: 0;
   right: 0;
   bottom: 0;
-  overflow: auto;
   pointer-events: none;
 }
 
 .gui-wrap > .main {
   pointer-events: all;
+  max-height: 100%;
+  overflow: auto;
 }
 
 .dg li.gui-stats:not(.folder) {
